--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
+    "pm2": "pm2 start __sapper__/build --name rokgg",
+    "pm2:restart": "pm2 restart rokgg",
+    "pm2:delete": "pm2 delete rokgg",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
     "test": "run-p --race dev cy:run"
