--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,4 +13,6 @@ jobs:
         username: jenkins
         key: ${{ secrets.ssh_key }}
         port: 22
-        script: whoami
+        script: |
+          whoami
+          ls -al
