--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,8 @@ jobs:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
       with:
-        host: 15.165.4.179
-        username: jenkins
+        host: ${{ secrets.host }}
+        username: ${{ secrets.username }}
         key: ${{ secrets.ssh_key }}
         port: 22
         script: |
